--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetSalon</title>
-    <link rel="stylesheet" href="/css/assignment1.css">
+    <title>Clean Pets | Home</title>
+    <link rel="stylesheet" href="/css/assignment.css">
 </head>
 <body>
-
     <header class="header">
         <h1 >Pet Salon</h1>
         <div>
@@ -16,20 +15,12 @@
         </div>
     </header>
 
-    <main class="main">
-        <h2 id="petCount"></h2>
-        <h3>Pet Names</h3>
-            <div class="flex">
-                <p id="petNames"></p>
-                <img src="/img/main.jpg" alt="pets">
-            </div>
+    <main>
 
     </main>
 
     <footer>
-
+        
     </footer>
-
-    <script src="/scripts/assignment1.js"></script>
 </body>
 </html>
