--- a/html/index.html
+++ b/html/index.html
@@ -15,12 +15,16 @@
         </div>
     </header>
 
-    <main>
-
+    <main class="main">
+        <h2>Welcome to Clean Pets</h2>
+        <p class="wrap">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error deserunt, libero nobis est unde perspiciatis sapiente ea minus laborum fuga maxime. Sit alias eum ex corrupti recusandae inventore assumenda culpa.</p>
+        <div>
+            <button class="button1"><a href="/html/Assignment.html">Register My Pet</a></button>
+        </div>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
