--- a/html/Assignment.html
+++ b/html/Assignment.html
@@ -11,6 +11,7 @@
     <header class="header">
         <h1 >Pet Salon</h1>
         <div>
+            <a href="/html/index.html">Home</a>
             <a href="#">About Us</a>
             <a href="#">Contact Us</a>
         </div>
@@ -49,7 +50,7 @@
                         <input type="text" id="txtService">
                     </div>
                     <div>
-                        <button>Register</button>
+                        <button onclick="register()">Register</button>
                     </div>
                 </div>
             </div>
