--- a/html/Assignment.html
+++ b/html/Assignment.html
@@ -5,55 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetSalon</title>
     <link rel="stylesheet" href="/css/assignment.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-
-    <header class="header">
-        <h1 >Pet Salon</h1>
-        <div>
-            <a href="/html/index.html">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/html/index.html">Clean Pet</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/html/Assignment.html">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sign In</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="header">
+            <h1>Register a New Pet</h1>
         </div>
     </header>
 
     <main class="main">
-        <h2 id="petCount"></h2>
-        <h3>Pet Names</h3>
-            <div class="flex">
-                <p id="petNames"></p>
-                <img src="/img/main.jpg" alt="pets">
-            </div>
-
-
-            <div>
-                <h2>Register a new pet</h2>
-                <div class="form-container">
-                    <div class="form-control">
-                        <label>Name:</label>
-                        <input type="text" id="txtName">
-                    </div>
-                    <div class="form-control">
-                        <label>Age:</label>
-                        <input type="text" id="txAge">
-                    </div>
-                    <div class="form-control">
-                        <label>Gender:</label>
-                        <input type="text" id="txtGender">
-                    </div>
-                    <div class="form-control">
-                        <label>Breed:</label>
-                        <input type="text" id="txtBreed">
-                    </div>
-                    <div class="form-control">
-                        <label>Service:</label>
-                        <input type="text" id="txtService">
-                    </div>
-                    <div>
-                        <button onclick="register()">Register</button>
-                    </div>
+        <div>
+            <h2>Register a new pet</h2>
+            <div class="form-container">
+                <div class="form-control">
+                    <label>Name:</label>
+                    <input type="text" id="txtName">
+                </div>
+                <div class="form-control">
+                    <label>Age:</label>
+                    <input type="number" id="txtAge">
+                </div>
+                <div class="form-control">
+                    <label>Gender:</label>
+                    <select id="txtGender">
+                        <option>---Select a Gender---</option>
+                        <option id="txtGender">Male</option>
+                        <option id="txtGender">Female</option>
+                    </select>
+                </div>
+                <div class="form-control">
+                    <label>Breed:</label>
+                    <input type="text" id="txtBreed">
+                </div>
+                <div class="form-control">
+                    <label>Service:</label>
+                    <select id="txtService">
+                        <option>---Select a Service---</option>
+                        <option id="txtService">Wash</option>
+                        <option id="txtService">Nails</option>
+                        <option id="txtService">Vaccians</option>
+                        <option id="txtService">Full Service</option>
+                    </select>
+                </div>
+                <div>
+                    <button onclick="register()">Register</button>
                 </div>
             </div>
+        </div>
+        <section class="container">
+            <table class="table">
+                <thead>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Gender</th>
+                    <th>Breed</th>
+                    <th>Service</th>
+                </thead>
+                <tbody id="petRows">
+                    
+                </tbody>
+            </table>
+        </section>
     </main>
 
     <footer>
@@ -61,5 +95,6 @@
     </footer>
 
     <script src="/scripts/assignment.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
