--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="container">
         <p class="wrap">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error deserunt, libero nobis est unde perspiciatis sapiente ea minus laborum fuga maxime. Sit alias eum ex corrupti recusandae inventore assumenda culpa.</p>
         <div class="register">
             <a href="/html/Assignment.html">Register New Pet</a>
