--- a/html/services.html
+++ b/html/services.html
@@ -8,7 +8,117 @@
 
 </head>
 <body>
-  
+  <header>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/html/index.html">Clean Pet</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="/html/Assignment.html">Register</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Pricing</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Sign In</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	<div class="header">
+		<h1>Register a New Pet</h1>
+	</div>
+	</header>
+
+	<main class="container">
+		<div>
+			<h2>Register a new pet</h2>
+			<div id="alertContainer">
+
+			</div>
+
+			<div id="alert-error" class="alert alert-danger hide" role="alert">
+				Please, add all the information required!
+			</div>
+
+      <div class="form-container">
+        <div class="mb-3">
+          <label>Name:</label>
+          <input class="form-control" type="text" id="txtName" />
+        </div>
+        <div class="mb-3">
+          <label>Age:</label>
+          <input class="form-control" type="number" id="txtAge" min="0"/>
+				</div>
+				<div class="mb-3">
+					<label>Gender:</label>
+					<select class="form-select" id="txtGender">
+						<option value="" disabled selected>---Select a Gender---</option>
+						<option value="Male">Male</option>
+						<option value="Female">Female</option>
+					</select>
+				</div>
+        <div class="mb-3">
+          <label>Breed:</label>
+            <input class="form-control" type="text" id="txtBreed" />
+        </div>
+				<div class="mb-3">
+					<label>Service:</label>
+					<select class="form-select" id="txtService">
+						<option value="" disabled selected>---Select a Service---</option>
+						<option value="Grooming">Grooming</option>
+						<option value="Vaccines">Vaccines</option>
+						<option value="Nails">Nails</option>
+					</select>
+				</div>
+				<div class="mb-3">
+					<label>Date:</label>
+					<input type="date" name="date" id="txtDate">
+				</div>
+				<div class="mb-3">
+					<label for="phone number">Phone number:</label>
+					<input class="form-control" type="number" id="txtPhone" />
+				</div>
+				<div class="mb-3">
+					<label>Payment Method:</label>
+					<select class="form-select" id="txtPayment">
+						<option value="" disabled selected>---Select a Payment Method---</option>
+						<option value="Card">Card</option>
+						<option value="Cash">Cash</option>
+						<option value="ApplePay">ApplePay</option>
+					</select>
+				</div>
+				<div>
+						<button class="btn btn-primary" onclick="register()">Register</button>
+				</div>
+            </div>
+    </div>
+
+    <section class="container">
+      <h2>Registered pets</h2>
+  	    <p id="petsCounter"></p>
+      <div id="petNames"></div>
+      <table class="table">
+        <thead>
+					<th>Name</th>
+					<th>Age</th>
+					<th>Gender</th>
+					<th>Breed</th>
+					<th>Service</th>
+					<th>Date</th>
+					<th>Payment</th>
+					<th>Actions</th>
+        </thead>
+        <tbody id="petRows">
+        </tbody>
+      </table>
+    </section>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="/scripts/services.js"></script>
