--- a/html/Assignment.html
+++ b/html/Assignment.html
@@ -21,7 +21,7 @@
 							<a class="nav-link active" aria-current="page" href="/html/Assignment.html">Register</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Pricing</a>
+							<a class="nav-link" href="/html/services.html">Services</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Sign In</a>
@@ -34,12 +34,11 @@
 		<h1>Register a New Pet</h1>
 	</div>
 	</header>
-
 	<main class="container">
 		<div>
-			<h2>Register a new pet</h2>
-			<div id="alertContainer">
+			<h2>Register Form</h2>
 
+			<div id="alertContainer">
 			</div>
 
 			<div id="alert-error" class="alert alert-danger hide" role="alert">
