--- a/html/index.html
+++ b/html/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clean Pets | Home</title>
-    <link rel="stylesheet" href="/css/assignment.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Clean Pets | Home</title>
+	<link rel="stylesheet" href="/css/assignment.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/html/index.html">Clean Pet</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/html/Assignment.html">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sign In</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="header">
-            <h1>Welcome to Clean Pets</h1>
-        </div>
-    </header>
+	<header>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/html/index.html">Clean Pet</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="/html/Assignment.html">Register</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/html/services.html">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Sign In</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="header">
+			<h1>Welcome to Clean Pets</h1>
+		</div>
+	</header>
 
-    <main class="container">
-        <p class="wrap">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error deserunt, libero nobis est unde perspiciatis sapiente ea minus laborum fuga maxime. Sit alias eum ex corrupti recusandae inventore assumenda culpa.</p>
-        <div class="register">
-            <a href="/html/Assignment.html">Register New Pet</a>
-        </div>
-    </main>
+	<main class="index-container">
+		<p class="wrap">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error deserunt, libero nobis est unde perspiciatis sapiente ea minus laborum fuga maxime. Sit alias eum ex corrupti recusandae inventore assumenda culpa.</p>
+		<div class="register">
+			<a href="/html/Assignment.html">Register New Pet</a>
+		</div>
+	</main>
+	<section class="img-bar">
+		<img src="/img/pet1.webp" alt="img">
+		<img src="/img/pet3.webp" alt="img">
+		<img src="/img/pet2.jpg" alt="img">
+		<img src="/img/pet4.webp" alt="img">
+	</section>
+	<footer>
 
-    <footer>
-
-    </footer>
-    <script src="/scripts/assignment.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	</footer>
+	<script src="/scripts/assignment.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
